@@ -1,5 +1,9 @@
 $Id$
 
+2016-02-29  Alex Samorukov  <samm@os2.kiev.ua>
+
+	drivedb.h: PM863 Series (ticket #661)
+
 2016-02-28  Alex Samorukov  <samm@os2.kiev.ua>
 
 	drivedb.h: OWC Aura Pro 480 GB (ticket #660)
